--- a/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Andrew Silveira - 5077086\n",
-    "### Aiswarya Thekkuveettil Thazhath - "
+    "### Aiswarya Thekkuveettil Thazhath - 8993970"
    ]
   },
   {
