Gave answer to question in Part 1

--- a/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,6 +642,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CBOW: [('dogs', 0.12486250698566437), ('sat', 0.08061248809099197), ('cats', 0.07399576157331467), ('the', 0.04237300902605057), ('and', 0.018277151510119438), ('pets', 0.011071980930864811), ('dog', 0.0013571369927376509), ('on', -0.1094222441315651), ('barked', -0.11910455673933029), ('are', -0.17424818873405457)]\n",
+      "SkipGram: [('dogs', 0.12486250698566437), ('sat', 0.08061248809099197), ('cats', 0.07399576157331467), ('the', 0.04237300902605057), ('and', 0.018277151510119438), ('pets', 0.011071980930864811), ('dog', 0.0013571369927376509), ('on', -0.1094222441315651), ('barked', -0.11910455673933029), ('are', -0.17424818873405457)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Andrew Silveira\n",
+    "# Source: Microsoft. (2025). Copilot (GPT-4) [Large language model]. https://copilot.microsoft.com/ \n",
+    "# Prompt: In python, I'm working on a project. I have to answer this: How to use word2Vec for SkipGrams and CBOW? Explore whether they will give different results for similar word\n",
+    "\n",
+    "sentences = [\n",
+    "    [\"the\", \"cat\", \"sat\", \"on\", \"the\", \"mat\"],\n",
+    "    [\"the\", \"dog\", \"barked\", \"at\", \"the\", \"cat\"],\n",
+    "    [\"cats\", \"and\", \"dogs\", \"are\", \"pets\"]\n",
+    "]\n",
+    "\n",
+    "cbow_model = Word2Vec(\n",
+    "    sentences,\n",
+    "    vector_size=50,\n",
+    "    window=3,\n",
+    "    sg=0,\n",
+    "    min_count=1\n",
+    ")\n",
+    "\n",
+    "skipgram_model = Word2Vec(\n",
+    "    sentences,\n",
+    "    vector_size=50,\n",
+    "    window=3,\n",
+    "    sg=1,\n",
+    "    min_count=1\n",
+    ")\n",
+    "\n",
+    "print(\"CBOW:\", cbow_model.wv.most_similar(\"cat\"))\n",
+    "print(\"SkipGram:\", skipgram_model.wv.most_similar(\"cat\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Andrew Silveira\n",
+    "\n",
+    "Source: Microsoft. (2025). Copilot (GPT-4) [Large language model]. https://copilot.microsoft.com/ \n",
+    "\n",
+    "Prompt: Now to answer: Explore whether they will give different results for similar words\n",
+    "\n",
+    "Answer: Both SkipGram and CBOW produced nearly identical neighbors for the word \"cat\". However, the data is limited., meaning they both converge to similar co-occurance statistics. CBOW captures semantic similarity while SkipGram contextual associations. The results also gives different results for similar words. For example, CBOW results for \"cat\" and \"dog\" has semantic similarity, and SkipGram results for \"cat\" and \"mat\" show contextual co-occurance."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -683,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
