--- a/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
@@ -63,41 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading 'punkt' tokenizer...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to c:\\Users\\Andre\\Applied AI And\n",
-      "[nltk_data]     ML\\PROG8245\\Assignments\\A3\\nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers\\punkt.zip.\n",
-      "[nltk_data] Downloading package punkt_tab to c:\\Users\\Andre\\Applied AI\n",
-      "[nltk_data]     And ML\\PROG8245\\Assignments\\A3\\nltk_data...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading 'punkt_tab' tokenizer...\n",
-      "NLTK Data Paths: ['C:\\\\Users\\\\Andre/nltk_data', 'c:\\\\Users\\\\Andre\\\\Applied AI And ML\\\\PROG8245\\\\Assignments\\\\A3\\\\.venv\\\\nltk_data', 'c:\\\\Users\\\\Andre\\\\Applied AI And ML\\\\PROG8245\\\\Assignments\\\\A3\\\\.venv\\\\share\\\\nltk_data', 'c:\\\\Users\\\\Andre\\\\Applied AI And ML\\\\PROG8245\\\\Assignments\\\\A3\\\\.venv\\\\lib\\\\nltk_data', 'C:\\\\Users\\\\Andre\\\\AppData\\\\Roaming\\\\nltk_data', 'C:\\\\nltk_data', 'D:\\\\nltk_data', 'E:\\\\nltk_data', 'c:\\\\Users\\\\Andre\\\\Applied AI And ML\\\\PROG8245\\\\Assignments\\\\A3\\\\nltk_data', 'nltk_data']\n",
-      "Contents of nltk_data: ['tokenizers']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gensim'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnltk\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnltk\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtokenize\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m word_tokenize\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgensim\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodels\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Word2Vec\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mre\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'gensim'"
      ]
     }
    ],
@@ -142,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,64 +619,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CBOW: [('dogs', 0.12486250698566437), ('sat', 0.08061248809099197), ('cats', 0.07399576157331467), ('the', 0.04237300902605057), ('and', 0.018277151510119438), ('pets', 0.011071980930864811), ('dog', 0.0013571369927376509), ('on', -0.1094222441315651), ('barked', -0.11910455673933029), ('are', -0.17424818873405457)]\n",
-      "SkipGram: [('dogs', 0.12486250698566437), ('sat', 0.08061248809099197), ('cats', 0.07399576157331467), ('the', 0.04237300902605057), ('and', 0.018277151510119438), ('pets', 0.011071980930864811), ('dog', 0.0013571369927376509), ('on', -0.1094222441315651), ('barked', -0.11910455673933029), ('are', -0.17424818873405457)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Andrew Silveira\n",
-    "# Source: Microsoft. (2025). Copilot (GPT-4) [Large language model]. https://copilot.microsoft.com/ \n",
-    "# Prompt: In python, I'm working on a project. I have to answer this: How to use word2Vec for SkipGrams and CBOW? Explore whether they will give different results for similar word\n",
-    "\n",
-    "sentences = [\n",
-    "    [\"the\", \"cat\", \"sat\", \"on\", \"the\", \"mat\"],\n",
-    "    [\"the\", \"dog\", \"barked\", \"at\", \"the\", \"cat\"],\n",
-    "    [\"cats\", \"and\", \"dogs\", \"are\", \"pets\"]\n",
-    "]\n",
-    "\n",
-    "cbow_model = Word2Vec(\n",
-    "    sentences,\n",
-    "    vector_size=50,\n",
-    "    window=3,\n",
-    "    sg=0,\n",
-    "    min_count=1\n",
-    ")\n",
-    "\n",
-    "skipgram_model = Word2Vec(\n",
-    "    sentences,\n",
-    "    vector_size=50,\n",
-    "    window=3,\n",
-    "    sg=1,\n",
-    "    min_count=1\n",
-    ")\n",
-    "\n",
-    "print(\"CBOW:\", cbow_model.wv.most_similar(\"cat\"))\n",
-    "print(\"SkipGram:\", skipgram_model.wv.most_similar(\"cat\"))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Andrew Silveira\n",
-    "\n",
-    "Source: Microsoft. (2025). Copilot (GPT-4) [Large language model]. https://copilot.microsoft.com/ \n",
-    "\n",
-    "Prompt: Now to answer: Explore whether they will give different results for similar words\n",
-    "\n",
-    "Answer: Both SkipGram and CBOW produced nearly identical neighbors for the word \"cat\". However, the data is limited., meaning they both converge to similar co-occurance statistics. CBOW captures semantic similarity while SkipGram contextual associations. The results also gives different results for similar words. For example, CBOW results for \"cat\" and \"dog\" has semantic similarity, and SkipGram results for \"cat\" and \"mat\" show contextual co-occurance."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -741,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -1263,7 +1182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.7"
   },
   "orig_nbformat": 4
  },
