part 2 data loaded and processed

--- a/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
@@ -1192,6 +1192,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1 : Import "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -1222,6 +1229,61 @@
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "nltk.download('punkt')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2 : Load the Dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "nltk.download('gutenberg')\n",
+    "from nltk.corpus import gutenberg\n",
+    "sentences = gutenberg.sents()\n",
+    "len(sentences),sentences[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3 :  Clean and Preprocess the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "def preprocess_sentence(tokenizedwords):\n",
+    "    # Join the list of words into a single string LOWER CASE \n",
+    "    sentence = ' '.join(tokenizedwords).lower()\n",
+    "    # Remove special characters and digits\n",
+    "    sentence = re.sub(r'[^a-zA-Z\\s]', ' ', sentence)\n",
+    "    # Tokenize the sentence into words\n",
+    "    tokens = word_tokenize(sentence)\n",
+    "    return tokens\n",
+    "# clean the sentences by applying the preprocess_sentence function\n",
+    "cleaned_sentences = [preprocess_sentence(sent) for sent in sentences]\n",
+    "cleaned_sentences = [sent for sent in cleaned_sentences if len(sent) > 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4 : word2vec Model"
    ]
   }
  ],
