--- a/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
@@ -1242,7 +1242,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2 : Load the Dataset "
+    "### Step 2 : Load the Dataset \n",
+    "\n",
+    "### Dataset Source and License\n",
+    "* Gutenberg Corpus\n",
+    "\n",
+    "NLTK includes a small selection of texts from the Project Gutenberg electronic text archive, which contains some 25,000 free electronic books\n",
+    "\n",
+    "https://www.nltk.org/book/ch02.html\n"
    ]
   },
   {
@@ -1435,7 +1442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4 : GloVe "
+    "### Step 4 : GloVe Model"
    ]
   },
   {
@@ -1632,6 +1639,25 @@
     "\n",
     "similarity_w2v_glove_df = pd.DataFrame(results)\n",
     "similarity_w2v_glove_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions \n",
+    "\n",
+    "* Across all the 3 word pairs , GloVe similarity is higher than the word2vec model trained on gutenberg\n",
+    "* man-woman pair shows the strongest similarity in both the models( gender pairs used occur so often)\n",
+    "*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Word2Vec vs Glove\n",
+    "\n"
    ]
   }
  ],
