--- a/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop_Fall2025.ipynb
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1321,49 +1321,10 @@
        "   'or',\n",
        "   'vex',\n",
        "   'her',\n",
-       "   '.'],\n",
-       "  ['She',\n",
-       "   'was',\n",
-       "   'the',\n",
-       "   'youngest',\n",
-       "   'of',\n",
-       "   'the',\n",
-       "   'two',\n",
-       "   'daughters',\n",
-       "   'of',\n",
-       "   'a',\n",
-       "   'most',\n",
-       "   'affectionate',\n",
-       "   ',',\n",
-       "   'indulgent',\n",
-       "   'father',\n",
-       "   ';',\n",
-       "   'and',\n",
-       "   'had',\n",
-       "   ',',\n",
-       "   'in',\n",
-       "   'consequence',\n",
-       "   'of',\n",
-       "   'her',\n",
-       "   'sister',\n",
-       "   \"'\",\n",
-       "   's',\n",
-       "   'marriage',\n",
-       "   ',',\n",
-       "   'been',\n",
-       "   'mistress',\n",
-       "   'of',\n",
-       "   'his',\n",
-       "   'house',\n",
-       "   'from',\n",
-       "   'a',\n",
-       "   'very',\n",
-       "   'early',\n",
-       "   'period',\n",
        "   '.']])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1334,7 @@
     "nltk.download('gutenberg')\n",
     "from nltk.corpus import gutenberg\n",
     "sentences = gutenberg.sents()\n",
-    "len(sentences),sentences[:5]"
+    "len(sentences),sentences[:4]"
    ]
   },
   {
@@ -1400,7 +1361,9 @@
     "    tokens = word_tokenize(sentence)\n",
     "    return tokens\n",
     "# clean the sentences by applying the preprocess_sentence function\n",
+    "# each sentence from gutenberg clean it tokenize it \n",
     "cleaned_sentences = [preprocess_sentence(sent) for sent in sentences]\n",
+    "# filter the sentences tat becoe empty after cleaning\n",
     "cleaned_sentences = [sent for sent in cleaned_sentences if len(sent) > 0]"
    ]
   },
@@ -1425,14 +1388,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top 5 words similar to 'handsome': [('remarkably', 0.8867231011390686), ('respectable', 0.8562947511672974), ('smart', 0.8516349792480469), ('healthy', 0.849723756313324), ('stout', 0.841456413269043)]\n"
+      "Word vector for 'handsome' using Word2Vec: [-0.09315292 -0.13072999 -0.3876612  -0.50967073 -0.03790328  0.09320099\n",
+      "  0.692321    0.5789336   0.02364715 -0.18167555 -0.11891529  0.50536454\n",
+      " -0.7227162   0.02534175 -0.04640222  0.24990785  0.26385468 -0.26167378\n",
+      " -0.27360988 -0.22104469  0.0647448  -0.21615443  0.30967143  0.431988\n",
+      "  0.30417392 -0.3424884   0.1360128  -0.11763038 -0.10801693  0.08008435\n",
+      "  0.12587473 -0.00782606  0.29962263 -0.05989619 -0.23067404  0.23031892\n",
+      "  0.11063472 -0.7947407  -0.11601597  0.12439854 -0.02112249  0.05642427\n",
+      "  0.33303598  0.2202469   0.21533899 -0.38631502 -0.22629449 -0.12824808\n",
+      "  0.23106417  0.04852922  0.26928574  0.33759734 -0.21101806  0.08151107\n",
+      " -0.10663588  0.3121017   0.27229995 -0.03226134  0.6955165   0.07515314\n",
+      "  0.17912754 -0.09654264 -0.1847248   0.1857787  -0.20957585  0.48715445\n",
+      " -0.02300184 -0.10553165 -0.24997859 -0.23056383  0.04684257  0.479738\n",
+      " -0.07501681  0.06811063  0.57050794  0.3510979  -0.29271734 -0.10646188\n",
+      " -0.43347546  0.07448536 -0.42817467  0.16917446  0.0580085  -0.14995606\n",
+      "  0.31411484 -0.03081154  0.15748654  0.0029346   0.7375331   0.03293284\n",
+      " -0.05559218 -0.49188057 -0.09490049 -0.04074189  0.74307156 -0.13781652\n",
+      " -0.02689384 -0.14265983  0.49808985 -0.35119188]\n",
+      "\n",
+      "Top 5 words similar to 'handsome': [('remarkably', 0.8795313835144043), ('elegant', 0.8628853559494019), ('healthy', 0.8587589263916016), ('unaffected', 0.8544491529464722), ('smart', 0.8483981490135193)]\n"
      ]
     }
    ],
@@ -1446,7 +1427,13 @@
     "    sg=1 #skip-gram model\n",
     ")\n",
     "\n",
+    "# Get word vector for a specific word\n",
+    "word = 'handsome'\n",
+    "vector_word2Vec = model_w2v.wv[word]\n",
+    "print(f\"Word vector for '{word}' using Word2Vec: {vector_word2Vec}\")\n",
+    "\n",
     "sim_w2v = model_w2v.wv.most_similar('handsome', topn=5)\n",
+    "print()\n",
     "print (\"Top 5 words similar to 'handsome':\", sim_w2v)\n"
    ]
   },
